from backend.shared.domain.entity import Entity


class AggregateRoot(Entity):
    pass
